# brewing_station

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  cmake.bat  cmake_android.bat  cmake_windows.bat  gen.bat  main.cpp
brew/: CMakeLists.txt
brew/include/: brew.h
brew/src/: main.cpp
cauldron/: App.xaml  CMakeLists.txt  MainWindow.xaml  cauldron.csproj
cauldron_native/: CMakeLists.txt
cauldron_native/src/: cauldron.cpp
code/: cmakelists.txt
code/apps/: cmakelists.txt
code/apps/android_only_test/: cmakelists.txt
code/apps/brew/: cmakelists.txt
code/apps/brew/include/: brew.h
code/apps/brew/src/: brew.cpp  main.cpp
code/apps/cauldron/: App.xaml.cs  MainWindow.xaml.cs  cauldron.csproj  cmakelists.txt
code/apps/windows_only_test/: cmakelists.txt
code/apps/windows_playground/: cmakelists.txt
code/libraries/: cmakelists.txt
code/libraries/cauldron_native/: cmakelists.txt
code/libraries/cauldron_native/src/: cauldron.cpp
code/libraries/engine/: cmakelists.txt
code/libraries/engine_native/: cmakelists.txt
code/libraries/engine_native/src/: engine.cpp
code/libraries/math/: cmakelists.txt
code/libraries/math/include/: matrix.h
code/libraries/renderer/: cmakelists.txt
code/libraries/renderer/include/: renderer.h
code/libraries/thread_employer/: cmakelists.txt
code/libraries/threading_native/: cmakelists.txt
code/libraries/util_native/: cmakelists.txt
code/libraries/util_native/include/defines/: defines.h
code/libraries/util_native/include/math/: matrix.h  quaternion.h  vector.h
code/libraries/util_native/include/visual/: bitmap.h  color.h
code/libraries/util_native/inl/math/: matrix.inl  quaternion.inl  vector.inl
code/libraries/util_native/src/visual/: color.cpp
documentation/: priority_list.odt
